Fixed use of depracated new URL() in ImageDownloader